--- a/knote/kubernetes/knote.yaml
+++ b/knote/kubernetes/knote.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: knote
-          image: learnk8s/knote-js:1.0.0
+          image: thanhnamdev308/knote-js:lastest
           ports:
             - containerPort: 3000
           env:
