Modify Jenkinsfile to work with K8s

--- a/knote/Jenkinsfile
+++ b/knote/Jenkinsfile
@@ -33,16 +33,9 @@ pipeline {
             }
             steps {
                 withCredentials([usernamePassword(credentialsId: 'docker-hub', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
-                    ansiblePlaybook(
-                        credentialsId: 'private_key',
-                        playbook: 'playbook.yml',
-                        inventory: 'hosts',
-                        become: 'yes',
-                        extraVars: [
-                            DOCKER_USERNAME: "${DOCKER_USERNAME}",  
-                            DOCKER_PASSWORD: "${DOCKER_PASSWORD}" 
-                        ]
-                    )
+                    sh '''
+                        kubectl apply -f kubernetes/
+                    '''
                 }
                 
             }
