--- a/knote/knote-js/templates/service.yaml
+++ b/knote/knote-js/templates/service.yaml
@@ -2,14 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "knote-js.fullname" . }}
-  labels:
-    {{- include "knote-js.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+      targetPort: {{ .Values.service.targetPort }}
+      nodePort: {{ .Values.service.nodePort }}
   selector:
-    {{- include "knote-js.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/name: {{ include "knote-js.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
