--- a/helm/knote-chart/templates/service.yaml
+++ b/helm/knote-chart/templates/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Name }}-service
 spec:
   selector:
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    app: knote
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.targetPort }}
