--- a/helm/knote-chart/templates/deployment.yaml
+++ b/helm/knote-chart/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-knote
+  name: {{ .Release.Name }}-knote-{{ .Values.env.name }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
