--- a/helm/env/prod-values.yaml
+++ b/helm/env/prod-values.yaml
@@ -8,10 +8,10 @@ image:
 service:
   type: NodePort
   port: 81
-  targetPort: 3001
+  targetPort: 3000
   nodePort: 30180
 
-mongoUrl: mongodb://54.159.79.101:27017/knote
+mongoUrl: mongodb://54.159.79.101:27017/knote-prod
 
 env:
   name: prod
